# site

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.claude/: CLAUDE.md
.claude/agents/: backend.md  frontend.md
.github/workflows/: backend.yml  frontend.yml  release.yml  verify.yml
client/: index.html  package-lock.json  package.json  vitest.config.ts
client/src/: App.vue  api.ts  style.css  types.ts
design/: README.md  build.mjs  fixtures.mjs  index.html
design/js/: chess.js  code-box.js  md-preview.js  md-toolbar.js
design/mdcast/: brand.toml
design/preview/: README.md  build.mjs  fixtures.mjs  package-lock.json  package.json
design/templates/: 404.html  base.html  page_search.html
docs/: architecture.md  testing.md
preview/: README.md  build.mjs  index.html
src/: assets.rs  config.rs  design.rs  files.rs  lib.rs  markdown.rs  mcp_args.rs  path_util.rs  state.rs  templates.rs
src/ai/: catalog.rs  engine.rs  mcp.rs  mod.rs  persistence.rs  policy.rs  tool_permissions.rs  ws_bridge.rs
src/entity/: assistant_event.rs  assistant_session.rs  llm_model.rs  llm_provider.rs  mod.rs  tool_permission.rs  user_mcp_server.rs
src/export/: assets.rs  bridge.rs  mod.rs  render.rs
src/markdown/: directives.rs  highlight.rs  links.rs  lookup.rs  mod.rs  renderer.rs  tests.rs
src/migration/: m_003_create_tags.rs  m_004_create_menus.rs  m_005_create_pages.rs  m_009_create_oauth.rs  m_010_replace_images_with_files.rs  m_011_create_assistant_sessions.rs  m_012_create_assistant_messages.rs  m_014_create_llm_providers.rs  m_015_split_llm_models.rs  m_019_drop_assistant_sessions_system_prompt.rs  m_022_add_pages_fulltext.rs  m_023_create_assistant_events.rs  mod.rs  (+7 more)
tests/: ai_catalog.rs  ai_mcp.rs  ai_persistence.rs  api_files.rs  api_galleries.rs  api_pages.rs  api_tags.rs  assistant_providers_status.rs  assistant_session_base.rs  assistant_session_compact.rs  assistant_session_flow.rs  assistant_session_generation.rs  assistant_session_parallel_approval.rs  assistant_session_subagent_approval_race.rs  assistant_session_subagent_pagewriter.rs  assistant_session_subagent_researcher.rs  assistant_session_subagent_resume.rs  export_assets.rs  export_bridge.rs  export_routes.rs  mcp_endpoint.rs  mcp_pages.rs  mcp_tags_files_galleries.rs  oauth_authorize.rs  oauth_refresh.rs  oauth_token.rs  policy_db.rs  tags_resolve.rs
(+155 files in other folders)
