[package]
name = "site"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "site_server"
path = "src/bin/site_server.rs"

[[bin]]
name = "site_migration"
path = "src/bin/site_migration.rs"

[[bin]]
name = "site_cli"
path = "src/bin/site_cli.rs"

[dependencies]
axum          = { version = "0.8", features = ["multipart", "ws"] }
tokio         = { version = "1.52.1", features = ["full"] }
sea-orm       = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json"] }
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
async-trait   = "0.1"
minijinja     = { version = "2", features = ["loader"] }
pulldown-cmark = "0.13.3"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tower-http    = { version = "0.6", features = ["trace", "catch-panic"] }
dotenvy       = "0.15"
argon2        = "0.5"
rand          = "0.10.1"
axum-extra    = { version = "0.12.6", features = ["cookie"] }
chrono        = { version = "0.4", features = ["serde"] }
hex           = "0.4"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image         = "0.25"
base64        = "0.22"
diffy         = "0.5.0"
sha2          = "0.11.0"
url           = "2"
mime_guess    = "2"
rust-embed    = { version = "8", features = ["mime-guess"] }
reqwest       = { version = "0.13.3", features = ["json"] }
futures-util  = "0.3"
dashmap       = "6"
parking_lot   = "0.12"
anyhow        = "1"
uuid          = { version = "1.23.1", features = ["v4", "serde"] }
htmd          = "0.5.4"
mermaid-svg   = "0.7.0"
chess-diagram = { version = "0.2", features = ["pgn"] }
syntect       = { version = "5", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "html", "regex-fancy"] }
mdcast        = { version = "0.3.0", features = ["typst-html"] }
bytes         = "1"
jaq-core      = "2"
jaq-std       = "2"
jaq-json      = { version = "1", features = ["serde_json"] }
entanglement-core     = "0.3"
entanglement-runtime  = { version = "0.3", default-features = false, features = ["mcp-http", "provider"] }
entanglement-provider = "0.3"

[dev-dependencies]
tower           = { version = "0.5", features = ["util"] }
http-body-util  = "0.1"
